--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -24,7 +24,7 @@ stopsignal=INT
 
 
 [program:synchronize]
-command=/sync_all_nodes.sh
+command=/supervised-scripts/sync_all_nodes.sh
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
