--- a/docker/Dockerfile.fedgraphnn
+++ b/docker/Dockerfile.fedgraphnn
@@ -134,6 +134,17 @@ RUN echo "fedgraphnn ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers
 # Change to non-root privilege
 USER fedgraphnn
 
+# Extra installation
+RUN sudo pip3 install sentencepiece
+RUN sudo pip3 install pytorch-ignite
+RUN sudo pip3 install pytest-cov
+
+# Batch Multi Node
+ENV USER fedgraphnn
+ENV HOME /home/$USER
+RUN echo $HOME
+RUN sudo pip install supervisor
+
 
 ##############################################################################
 # PyTorch (latest version: v1.9.0)
@@ -142,13 +153,43 @@ RUN sudo pip3 install numpy ninja pyyaml mkl mkl-include setuptools cmake cffi t
 RUN sudo pip3 install torch torchvision torchaudio
 
 ##############################################################################
+# SSH Setup
+##############################################################################
+ENV SSHDIR $HOME/.ssh
+RUN sudo mkdir -p ${SSHDIR}
+RUN sudo touch ${SSHDIR}/sshd_config
+RUN sudo ssh-keygen -t rsa -f ${SSHDIR}/ssh_host_rsa_key -N ''
+RUN sudo cp ${SSHDIR}/ssh_host_rsa_key.pub ${SSHDIR}/authorized_keys
+RUN sudo cp ${SSHDIR}/ssh_host_rsa_key ${SSHDIR}/id_rsa
+RUN sudo chown -R ${USER}:${USER} ${SSHDIR}/
+RUN sudo echo "       IdentityFile ${SSHDIR}/id_rsa" >> ${SSHDIR}/config \
+&& sudo echo "       StrictHostKeyChecking no" >> ${SSHDIR}/config \
+&& sudo echo "       UserKnownHostsFile /dev/null" >> ${SSHDIR}/config \
+&& sudo echo "       Port 2022" >> ${SSHDIR}/config \
+&& sudo echo 'Port 2022' >> ${SSHDIR}/sshd_config \
+&& sudo echo 'UsePrivilegeSeparation no' >> ${SSHDIR}/sshd_config \
+&& sudo echo "HostKey ${SSHDIR}/ssh_host_rsa_key" >> ${SSHDIR}/sshd_config
+RUN sudo echo "PidFile ${SSHDIR}/sshd.pid" >> ${SSHDIR}/sshd_config
+RUN sudo cat ${SSHDIR}/sshd_config
+RUN sudo cat ${SSHDIR}/config
+
+RUN sudo chmod -R 600 ${SSHDIR}/*
+RUN sudo chown -R ${USER}:${USER} ${SSHDIR}/
+RUN eval `ssh-agent -s` && ssh-add ${SSHDIR}/id_rsa
+
+RUN sudo apt install -y iproute2
+
+
+EXPOSE 22
+
+
+USER fedgraphnn
+
+##############################################################################
 # Supervisor container startup
 ##############################################################################
-RUN sudo apt-get update && \
-    sudo apt-get install -y supervisor && \
-    sudo apt-get clean
 ADD supervisord.conf /etc/supervisor/supervisord.conf
-ADD sync_all_nodes.sh supervised-scripts/sync_all_nodes.sh
+ADD sync_all_nodes.sh /supervised-scripts/sync_all_nodes.sh
 RUN sudo chmod 755 supervised-scripts/sync_all_nodes.sh
 
 ##############################################################################
